--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,9 +3,9 @@ Type: Package
 Title: Adaption of evaluate package version 0.23.01 to repbox
 Version: 0.23.1
 Authors@R: c(
-    person("Sebastian", "Kranz", role = "aut"),
+    person("Sebastian", "Kranz", role = "aut", email = "sebastian.kranz@uni-ulm.de"),
     person("Hadley", "Wickham", role = "aut"),
-    person("Yihui", "Xie", role = c("aut", "cre"), email = "xie@yihui.name", comment = c(ORCID = "0000-0003-0645-5666")),
+    person("Yihui", "Xie", role = c("aut")),
     person("Michael", "Lawrence", role = "ctb"),
     person("Thomas", "Kluyver", role = "ctb"),
     person("Jeroen", "Ooms", role = "ctb"),
